--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,12 @@
+@inproceedings{brisaboa2018new,
+  title={New Structures to Solve Aggregated Queries for Trips over Public Transportation Networks},
+  author={Brisaboa, Nieves R and Fari{\~n}a, Antonio and Galaktionov, Daniil and Rodeiro, Tirso V and Rodr{\'\i}guez, M Andrea},
+  booktitle={Proc. 25th International Symposium on String Processing and Information Retrieval (SPIRE)},
+  pages={88--101},
+  year={2018},
+  organization={Springer}
+}
+
 @inproceedings{moffat2017ans,
   title={ANS-based index compression},
   author={Moffat, Alistair and Petri, Matthias},
