--- a/paper.tex
+++ b/paper.tex
@@ -128,7 +128,7 @@ Cite ways of obtaining the data we need, to show that it's possible even though 
 CSA. Brief explanation about WMs here. Explain ZSTD and applications.
 
 \subsection{Our model for compact trip representation}
-We speak about IS and SPIRE 2018 version here. So here goes a picture where we have stops $s_i \in S = \{1,...|S|\}$, lines $l_i \in L = \{1,...|L|\}$ and journeys $j_i \in J^l = \{1,...|J^l|\}$. It is important to state that journeys are \textbf{not} identified by $j_i$, as the same $j_i$ can belong to several $J^l$ from different lines, so we speak about journey \textbf{codes} (jcodes) instead of journey identifiers.
+In our previous structures proposed in \cite{brisaboa2018new}, we propose a work-in-progress model to represent the demand information for a public transportation network, as seen in the Figure~\ref{fig:er}.
 
 \begin{figure}
 %\centering
@@ -137,13 +137,24 @@ We speak about IS and SPIRE 2018 version here. So here goes a picture where we h
 \label{fig:er}
 \end{figure}
 
+These are the main elements from our model:
+\begin{itemize}
+    \item A \textbf{stop\_place} is a physical stop with a location, on which several lines may make stops.
+    \item A \textbf{line} is an ordered sequence of stop places that can be traveled by a transport vehicle, such as a bus or a train. It only considers one direction. For this reason, there is often a different and complementary line for the opposite direction.
+    \item A \textbf{journey} is a single traversal of a transport vehicle over a line. It can be seen as a vehicle trip, instead of a user trip.
+    \item A \textbf{stage} is formed by a boarding from a stop and alighting to another from the same single line and journey.
+    \item An \textbf{user\_trip} is a concatenation of several stages, until the final destination (alighting stop of the last stage) is reached.
+\end{itemize}
+
+This approach allows us to treat the information in a layered fashion: the bottom layer is a static network representation, formed by the line and stop\_place entities, the middle layer are the journeys made by vehicles that make stops at specific times, while the top layer are the trips made by the users over these vehicle journeys. In the Figure~\ref{fig:example_network} we show an example for the two bottom layers. Our proposed implementation can be found in Section~\ref{seq:ps}.
+
 \begin{figure}
 \includegraphics[width=\textwidth]{example_network.eps}
 \caption{An example network for our model, with two lines and five stops}
 \label{fig:example_network}
 \end{figure}
 
-Users can be attached to trips, but we don't care about them yet.
+Finally, it is possible to introduce a \textbf{user} identity, with an anonymized identifier to segregate trips by users. However, we do not consider such information useful for the kind of analysis that this work focuses on. If needed in the future, this additional entity could be trivially integrated in our representation.
 
 \section{Relevant queries}
 \label{seq:rq}
@@ -155,10 +166,12 @@ In the context of public transportation networks, we are interested in solving t
 \end{enumerate}
 
 \section{Proposed Structures}
+\label{seq:ps}
+
 As of today, we are not aware of any indexing structure that would allow to efficiently represent trajectories that could also support all the kinds of queries described in Section~\ref{seq:rq}. For this reason, we propose two data structures, \acumm~and~\ctr. The first is targeted for queries of type A, solving most aggregation queries in constant time, while the later can be used for queries of type B.
 
 \subsection{Common Structures}
-Both \acumm~and \ctr~need a network representation to be operated, which is represented in the following components:
+Both \acumm~and \ctr~need a network representation to be operated, along with information about the transport vehicle journeys. Therefore, the following structures represent a network with stops $s_i \in S = \{1,...|S|\}$, lines $l_i \in L = \{1,...|L|\}$ and journeys $j_i \in J^l = \{1,...|J^l|\}$. It is important to state that journeys are \textbf{not} identified by $j_i$, as the same $j_i$ can belong to several $J^l$ from different lines, so we speak about journey \textbf{codes} (jcodes) instead of journey identifiers.
 
 \begin{itemize}
     \item $lineStop_i(j)$ is the $j$th stop of line $l_i$
