--- a/paper.tex
+++ b/paper.tex
@@ -143,7 +143,7 @@ A great amount of works in Compressed Data Structures revolve around bitvectors,
     \item $select_1(B,i)$ returns the position in $1..n$ where the $i$th 1 occurs. Therefore, $rank_1(B,select_1(B,i)) = i$.
 \end{itemize}
 
-These operations can be supported in constant time with $o(n)$ extra bits \cite{Jac89,Mun96}, although several techniques exist for compressing bitvectors \cite{Raman:2002:SID:545381.545411,okanohara2007practical}. \marginpar{WTF is wrong with \cite{Golynski2007}?? I cannot find it, paywalls everywhere. Someone (Fari?) cited him before, but I am not going to cite something I cannot read...}
+These operations can be supported in constant time with $o(n)$ extra bits \cite{Jac89,Mun96}, although several techniques exist for compressing bitvectors \cite{Raman:2002:SID:545381.545411,okanohara2007practical}. \marginpar{WTF is wrong with \cite{Golynski2007}?? I cannot find it, paywalls everywhere. Someone (Fari?) cited it before, but I am not going to cite something I cannot read...}
 
 \subsubsection{Compressed Suffix Array (CSA)}
 \label{sec:csa}
@@ -155,7 +155,28 @@ Sadakane's CSA \cite{Sad03} further reduces the space by replacing $A$ with a pe
 
 \subsubsection{Wavelet Matrix (WM)}
 \label{sec:wm}
-Brief explanation about WMs here.
+Based on the Wavelet Trees \cite{WT03}, the Wavelet Matrix \cite{CNO15} is a structure that is able to perform, among others, operations of $rank_a(S,i)$ and $select_a(S,i)$ $\forall a \in \Sigma$ and a sequence $S[1..n]$ over the vocabulary $\Sigma$ in $O(log\sigma)$ time while using $n\lceil log_2\sigma\rceil~+~o(n)$ bits of space, begin $\sigma = |\Sigma|$.
+
+The WM is built with $\lceil log_2\sigma\rceil$ levels, each level having a bitvector $B_i$ with rank and select capabilities, where $B_1$ contains the most significant bit of every symbol $a \in S$, $B_2$ contains the second most significant bit and so forth. To further explain how these bits are positioned, we must consider $a_k$ as the $k$th bit of $a$ in significance, and $B^{-1}_i[a_k]$ as the position of the bit $a_k$ from $a$ in the bitvector $B_i$. Then, 
+\[
+    B_i[j] = \left\{\begin{array}{lr}
+        S[j]_1, & \text{iff } i=1\\
+        a_i, & \text{iff } i>1 \wedge (a_{i-1}=0 \wedge j=rank_0(B_{i-1},B^{-1}_{i-1}(a_{i-1}))) \\
+        & \vee~(a_{i-1}=1~\wedge~j=rank_0(B_{i-1},n)~+~rank_1(B_{i-1},B^{-1}_{i-1}(a_{i-1})))
+        \end{array}\right.
+\]
+
+That is, $B_1$ contains all the bits $a_1 \forall a \in S$, in the same order as in S. After that, $B_2$ contains the $a_2$ bits from those $a$ such as $a_1 = 0$ first, followed by those with $a_1 = 1$. That way, all the position of each $a_i$ in $B_i$ depends first by the value of $a_{i-1}$ and later by their position in $B_{i-1}$. Refer to the structures (ii) and (iii) in Figure~\ref{fig:example_ctr} for examples of one and two-leveled WM. Additionally, there exists a conceptual \textit{leaf level}, that is formed by the final position of every $a$ after applying the recursion on the last level. Because the sorting of each level depends on the values of the previous most significant bits, in the leaf level all symbols are sorted by their reverse representation in bits.
+
+This structure allows to answer the following operations in $O(log\sigma)$ time:
+\begin{itemize}
+    \item $access(S,i)$ returns the value in any position in the original sequence $S$ by following through the levels of the WM using the $rank$ operation on bitvectors. If $B_1[i]$ is 0, then $B_2[rank_0(B_1,i)]$ must be accessed next. Otherwise, it is $B_2[rank_0(B_1,n) + rank_1(B_1,i)]$. This must be recursively applied until the leaf level is reached, and the traversed bits will compose the value of $S[i]$.
+    \item $rank_a(S,i)$ is calculated with the same operations as in $access$, with the difference that in this case we know whether we need to use $rank_0$ or $rank_1$ on each bitvector as the value of the symbol $a$ is known. To calculate the number of occurrences of $a$ in $S[1..i]$ we must simply subtract the position reached in the leaf level to the position of the first occurrence of $a$ on that level, which can be either stored for each symbol in $O(\sigma)$ bits or calculated by making an analogous traversal from the first position of $S$.
+    \item $select_a(S,i)$ first $i$ must be added to the first position of $a$ in the leaf level, which as for $rank$, can be either stored or calculated. After obtaining this position $j$, the WM must be traversed in reverse order using $select$ on bitvectors until the first level is reached. When $a_i=0$ the traversal from the lower level position $B_{i+1}[j]$ must be as $select_0(B_i,j)$, while when $a_i=1$, it is done as $select_1(B_i,j-rank_0(B_{i},n))$.
+    \item $range_{a,b}(S,i,j)$ returns the number of occurrences of the symbols between $a$ and $b$ in $S[i..j]$. This operation was first introduced in \cite{gagie2012new} for Wavelet Trees and later supported by the Wavelet Matrix \cite{CNO15}, and we make extensive use of it in this work. It is solved with two simultaneous traversals similar to $rank$ over $i$ and $j$, only that it is possible that at some levels it is required to calculate both $rank_0$ and $rank_1$. However, the worst case time complexity of $O(log\sigma)$ is maintained, due to the fact that it is not necessary to reach the leaf level for all the symbols in $a..b$\footnote{As long as $a\neq b$. Otherwise, $rank_a(S,j)-rank_a(S,i)$ can be used.}.
+\end{itemize}
+
+While a compression method is proposed in \cite{CNO15} by using canonical Huffman encoding on the symbols, it could not be applied in our work because it severely reduces the efficiency of $range_{a,b}(S,i,j)$. Instead, we focused on compressing the bitvectors and using ad-hoc optimizations to reduce the average height of our WMs.
 
 \subsection{Our model for compact trip representation}
 In our previous structures proposed in \cite{brisaboa2018new}, we propose a work-in-progress model to represent the demand information for a public transportation network, as seen in the Figure~\ref{fig:er}.
