--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,31 @@
+@inproceedings{brisaboa2009k,
+  title={k2-trees for compact web graph representation},
+  author={Brisaboa, Nieves R and Ladra, Susana and Navarro, Gonzalo},
+  booktitle={Proc. 16th International Symposium on String Processing and Information Retrieval (SPIRE)},
+  pages={18--30},
+  year={2009},
+  organization={Springer}
+}
+
+@article{larsson2000off,
+  title={Off-line dictionary-based compression},
+  author={Larsson, N Jesper and Moffat, Alistair},
+  journal={Proceedings of the IEEE},
+  volume={88},
+  number={11},
+  pages={1722--1732},
+  year={2000},
+  publisher={IEEE}
+}
+
+@article{brisaboa2019gract,
+  title={GraCT: A Grammar-based Compressed Index for Trajectory Data},
+  author={Brisaboa, Nieves R and G{\'o}mez-Brand{\'o}n, Adri{\'a}n and Navarro, Gonzalo and Param{\'a}, Jos{\'e} R},
+  journal={Information Sciences},
+  year={2019},
+  publisher={Elsevier}
+}
+
 @inproceedings{brisaboa2018new,
   title={New Structures to Solve Aggregated Queries for Trips over Public Transportation Networks},
   author={Brisaboa, Nieves R and Fari{\~n}a, Antonio and Galaktionov, Daniil and Rodeiro, Tirso V and Rodr{\'\i}guez, M Andrea},
